octosplay/apps/octosplay_apps_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octosplay
  #namespace: apps
  labels:
    octos-play: apps
  annotations:
    app-version: aplikasi ini di build dengan image versi satu
spec:
  replicas: 3
  selector:
    matchLabels:
      octosplay-replica: apps
  template:
    metadata:
      name: pod-apps
      labels:
        octosplay-replica: apps
    spec:
      containers:
      - name: octosplayapps
        image: docker.io/zukino/octosapps:1.0.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 1
