octosplay/apps/octosplay_apps_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2apps
  #namespace: apps
  labels:
    octos-play: apache2apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    octosplay-replica: api
